team section on small screens fixed

--- a/less/agency.less
+++ b/less/agency.less
@@ -198,14 +198,13 @@ header {
             margin: auto;
         }
         .intro-text {
-            padding-top: 300px;
-            padding-bottom: 200px;
+            padding-top: 40vh;
             font-family: "Roboto Mono", monospace;
-            font-size: 40px;
+            font-size: 55px;
             font-weight: 100;
             color: white;
-            line-height: 40px;
-            margin-bottom: 25px;
+            line-height: 55px;
+//            margin-bottom: 25px;
             .intro-lead-in {
             }
             .intro-heading {
