--- a/less/team.less
+++ b/less/team.less
@@ -55,11 +55,12 @@ member {
     flex: initial;
     width: 10%;
     .compressed {
-      top: 30vh;
-      left: -3vh;
+      top: 50vh;
+      left: 1vw;
+      width: 50vw;
       h2 {
-        transform: rotate(-90deg);
-        transition: 0.3s ease 0s;
+//        transform: rotate(-90deg);
+//        transition: 0.3s ease 0s;
         font-size: 2em;
       }
       .responsive-position {
@@ -72,6 +73,23 @@ member {
     width: 70%;
   }
 }
+
+@media(min-width: 901px) {
+  .accordion { 
+    &:hover member {
+      .compressed {
+        top: 40vh;
+        left: -20vw;
+        h2 {
+          transform: rotate(-90deg);
+          transition: 0.3s ease 0s;
+        }
+      }
+    }
+  }
+}
+
+//@media(min-width: /)
 
 .headshot {
   float: left;
@@ -118,8 +136,8 @@ member {
   }
 
   .compressed {
-    transform: rotate(90deg);
-    top: 23vh;
+//    transform: rotate(90deg);
+//    top: 23vh;
     min-width: 12em;
     text-align: left;
     transform: rotate(-90deg);
